--- a/myproject/index/templates/index/index.html
+++ b/myproject/index/templates/index/index.html
@@ -22,7 +22,7 @@
         <header>
                 <div class="header">
                         <div class="header-block">
-                                <a href="index.html" class="logo">gamehub</a>
+                                <a href="{{url_for('index')}}" class="logo">gamehub</a>
                                 <div>
                                         <ul class="header-ul">
                                                 <li class="flex searchlogo"><img src="{{ url_for('static', filename='images/search.svg') }}" alt="search"></li>
