--- a/myproject/auth/templates/auth/auth.html
+++ b/myproject/auth/templates/auth/auth.html
@@ -11,7 +11,7 @@
 <body class="reg-body">
 	<div class="reg-container" id="reg-container">
 		<div class="form-reg-container sign-up-reg-container">
-            <a href="{{url_for('index')}}"><img class="arrow" src="{{ url_for('static',filename='images/arrow.png')}}"></a>
+            <a href="{{url_for('index.index')}}"><img class="arrow" src="{{ url_for('static',filename='images/arrow.png')}}"></a>
 			<form class="reg-form" method="POST">
 				<h1>Create Account</h1>
 				{{ regForm.hidden_tag()}}
@@ -23,7 +23,7 @@
 			</form>
 		</div>
 		<div class="form-reg-container sign-in-reg-container">
-            <a href="{{url_for('index')}}"><img class="arrow" src="{{ url_for('static',filename='images/arrow.png')}}"></a>
+            <a href="{{url_for('index.index')}}"><img class="arrow" src="{{ url_for('static',filename='images/arrow.png')}}"></a>
 			<form class="reg-form" method="POST">
 				<h1>Sign in</h1>
 				{{ loginForm.hidden_tag() }}
