--- a/myproject/index/templates/index/index.html
+++ b/myproject/index/templates/index/index.html
@@ -111,9 +111,9 @@
                                 </div>
                                 {% endif %}
 
-                                {% for post in posts %}
-                                        {{post_builder(post)}}
-                                {% endfor %}
+                                <div id="post-container">
+
+                                </div>
 
 
                         </section>
@@ -194,5 +194,8 @@
                 <div class="copyright">Copyright © 2010-2020 Freepik Company S.L. All rights reserved.</div>
 
         </footer>
+        <script>
+                addPosts()
+        </script>
 </body>
 </html>
