--- a/myproject/index/templates/index/index.html
+++ b/myproject/index/templates/index/index.html
@@ -96,7 +96,7 @@
                                                                 {{form.title(class="p-Title",placeholder="Title")}}
                                                         </label>
                                                         
-                                                        <div class="textarea">
+                                                        <div>
                                                                 {{form.text(class="textarea",placeholder="what's on you mind?")}}
                                                         </div>
                                                         
@@ -195,6 +195,7 @@
 
         </footer>
         <script>
+                
                 addPosts()
         </script>
 </body>
