--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -1859,7 +1859,7 @@ background-color:#dddfe2;
 
 .opwidth{
 	width: 49%;
-	margin-left: 5x;
+	margin-left: 5px;
 }
 
 .inline{
@@ -1879,5 +1879,388 @@ background-color:#dddfe2;
 	border: none;
 	text-decoration: none;
 	cursor: pointer; 
-	padding-top: auto;
+    padding-top: auto;
+}
+
+/*============profilebar==============*/
+
+.mainDiv{
+   	width: 100%;
+	background-color: #fff;
+	margin: 0 auto 20px auto;
+	border-radius: 3px;
+	position: relative;
+}
+
+.post-title{
+	width: 100%;
+	height: 33px;
+	background-color: #f6f7f9;
+	border-bottom: 1px solid #dddfe2;
+	border-radius: 2px 2px 0 0;
+	font-size: 13.5px;
+}
+.post-title p{
+	margin-right: 5px;
+	margin-top: 3px;
+	float: right;
+	padding: 3px 7px;
+	border-radius: 50%;
+}
+.post-title p:hover{
+    background-color: #ddd;
+}
+.post-title a{
+	line-height: 33px;
+	font-weight: bold;
+	color: #365899;
+    font-size: 13px;
+	padding:0 3px 0 3px;
+}
+
+
+.post-title a:first-of-type{
+	    height: 14px;
+        padding:4px 6px 4px 4px;
+	    color: #4b4f56;
+}
+.post-title a:nth-of-type(2) i{
+	    height: 14px;
+        padding:4px 2px 4px 4px;
+	    color: #4b4f56;
+}
+.post-title a i{
+	padding: 3px;
+}
+
+/*image and text container*/
+
+.imtcontainer{
+	width: 100%;
+	/*min-height: 71px;*/
+	border: 1px solid transparent;
+    border-radius: 3px;
+    background-color: #fff;
+
+}
+
+.imtcontainer >.img{
+	float: left;
+	width: 40px;
+	height: 40px;
+	background-color: #eee;
+	margin: 8px 1px 0 8px;
+	display: inline-block;
+	border: 1px solid transparent;
+}
+.imtcontainer >.img img{
+	width: 100%;
+	height: 100%;
+}
+
+.imtcontainer >.textarea{
+	display: inline-block;
+	background-color: #fff;
+	width: 90%;
+}
+.imtcontainer >.textarea textarea{
+	display: flex;
+	margin-top: 8px;
+	width: 100%;
+	/*min-height: 90%;*/
+	text-align: left;
+	padding: 10px;
+	border: none;
+	resize:none;
+	font-size: 16px;
+}
+.imtcontainer >.textarea textarea:focus{
+	  border:none ;
+	  outline: none;
+}
+
+
+.post-line{
+	position: relative;
+	margin: 1px auto;
+	width:100%;
+	border-top: 1px solid #e9ebee;
+	text-align: left;
+	padding-top: 1px;
+  background-color:#fff;
+}
+.post-line span{
+	border-radius: 50px;
+	padding: 11px;
+	margin-bottom: 5px;
+	margin-left: 5px;
+	display: none;
+	z-index: 10;
+	border: 1px solid #fff;
+}
+.post-line span:active{
+	outline:5px #333;
+}
+.post-line i{
+	position: absolute;
+	top: -18px;
+	right: 5px;
+	color: #4b4f56;
+}
+.post-line .post-colors{
+	display: inline-block;
+      visibility: hidden;
+  }
+/*icons*/
+
+.post-icons{
+	width: 100%;
+	padding-left: 10px;
+	border:1px solid transparent;
+	background-color: #fff;
+}
+
+.post-photos , .feeling , .post-more , .checkin, .tagfriend, .post-back, .live{
+	text-indent: 5px;
+	margin-top: 6px;
+	line-height: 32px;
+	display: inline-block;
+	height: 32px;
+	border-radius: 50px;
+	background-color: #f6f7f9;
+	padding: 0px 6px 0px 3px;
+	transition: all .0s ease-in-out;
+}
+.post-photos a , .feeling a , .checkin a , .tagfriend a, .post-back a, .live a {
+	color: #333;
+	font-weight: bold;
+	font-size: 13.8px;
+}
+.post-photos i{
+	color: #8bbf50;
+}
+
+.feeling i{
+	color: #f6d16f
+}
+.post-more{
+	padding: 0px 10px 0px 10px;
+	text-indent: 0;
+	line-height: 30px;
+	}
+.post-more span{
+	border-radius: 50px;
+	display: inline-block;
+	padding: 2.5px;
+	background-color: #a7aab1
+}
+
+.post-photos:hover , .feeling:hover , .post-more:hover, .checkin:hover, .tagfriend:hover, .post-back:hover, .live:hover{
+background-color:#dddfe2;
+}
+
+/*post-buttons*/
+
+.post-button-footer{
+	width: 100%;
+	background-color: #fff;
+	text-align: right;
+	padding-bottom: 5px;
+	padding-top: 15px;
+}
+
+.post-button-footer a:first-of-type{
+	font-size: 13px;
+	display: inline-block;
+	color: #333;
+	line-height: 21px;
+	padding: 1px 2px 1px 2px;
+	width: 147px;
+	height: 24px;
+	text-align: center;
+	border:1px solid #ced0d4;
+}
+.post-button-footer a:nth-of-type(2){
+	color: #fff;
+	display: inline-block;
+	padding: 1px 2px 1px;
+     width: 61px;
+     height: 24px;
+     line-height: 21px;
+     text-align: center;
+     background-color: #4267b2;
+}
+
+.clicked{
+	height: 290px;
+	background-color: #fff
+}
+
+.area{
+	min-height: 117px;
+}
+
+.opwidth{
+	width: 49%;
+	margin-left: 5px;
+}
+
+.inline{
+	display: inline-block!important;
+}
+.visible{
+	visibility: visible!important;
+}
+
+.p-Title{
+	margin: 5px 10px 0;
+	border: solid 0;
+	width: 95%;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
+.dddnav * {
+  box-sizing: border-box;
+}
+
+.dddnav {
+  align-items: center;
+  display: flex;
+  font-family: "Open Sans";
+  font-size: 12pt;
+}
+
+.navcontainer {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 0 1vw;
+  width: 80%;
+}
+
+.navinner {
+  position: relative;
+}
+
+.navinner > a:not(.profileddtrigger):not(.ddtriggermobile) {
+  color: #7b7de5;
+  margin: 0 .25vw;
+  padding: 0 .5vw;
+}
+
+@media (max-width: 1000px) {
+  .navinner > a:not(.profileddtrigger):not(.ddtriggermobile) {
+    display: none;
+  }
+}
+
+.profileddtrigger {
+  margin: 0 .25vw;
+}
+
+.ddtriggermobile {
+  margin-right: .75vw;
+  position: relative;
+  top: .75vh;
+}
+
+@media (min-width: 1000px) {
+  .ddtriggermobile {
+    display: none;
+  }
+}
+
+.ddtriggermobile i {
+  color: #7b7de5;
+  font-size: 24pt;
+}
+
+@media (min-width: 1000px) {
+  .mobilemenudd {
+    display: none;
+  }
+}
+
+.profileddtrigger {
+  position: relative;
+}
+
+
+.profileddtrigger img {
+  	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+}
+
+.ddcontainer {
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 14px 0 rgba(0, 0, 0, 0.2);
+  min-width: 200px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  right: -3px;
+  top: 40px;
+  transform: translateY(-5px);
+  transition: 300ms ease;
+  z-index: -1;
+}
+
+.ddcontainer.active {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(0px);
+  z-index: 50;
+}
+
+.ddheader {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1.5vw;
+}
+
+.ddheader:hover,
+.ddheader:focus {
+  background: #f7f7f7;
+}
+
+.ddheader img {
+  border-radius: 50%;
+  height: 52px;
+}
+
+.ddheader .ddname {
+  color: #555;
+  margin: 8px 0 4px;
+}
+
+.ddheader .ddtitle {
+  color: #999;
+  font-size: 10pt;
+}
+
+.ddnav {
+  border-top: 1px solid #e5e5e5;
+  display: flex;
+  flex-direction: column;
+}
+
+.ddnav a {
+  border-bottom: 1px solid #e5e5e5;
+  color: #000;
+  display: flex;
+  padding: 8px 16px;
+}
+
+.ddnav a span:not(.material-icons) {
+  margin-left: 5px;
+}
+
+.ddnav a:hover,
+.ddnav a:focus {
+  background: #f7f7f7;
 }
