--- a/myproject/index/templates/index/index.html
+++ b/myproject/index/templates/index/index.html
@@ -58,7 +58,7 @@
                                                                                                 <a href="notification.html"><span class="material-icons">notifications</span><span>Notifications</span></a>
                                                                                                 <a href="settings.html"><span class="material-icons">settings</span><span>Settings</span></a>
                                                                                                 <a href="support.html"><span class="material-icons">phone</span><span>Support</span></a>
-                                                                                                <a href="#"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
+                                                                                                <a href="{{url_for('index.logout')}}"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
                                                                                         </nav>
                                                                                 </div>
                                                                         </nav>
@@ -105,7 +105,7 @@
                                                                                                 <a href="notification.html"><span class="material-icons">notifications</span><span>Notifications</span></a>
                                                                                                 <a href="settings.html"><span class="material-icons">settings</span><span>Settings</span></a>
                                                                                                 <a href="support.html"><span class="material-icons">phone</span><span>Support</span></a>
-                                                                                                <a href="#"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
+                                                                                                <a href="{{url_for('index.logout')}}"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
                                                                                         </nav>
                                                                                 </div>
                                                                         </nav>
