--- a/myproject/index/templates/index/index.html
+++ b/myproject/index/templates/index/index.html
@@ -52,7 +52,7 @@
                                                                                 <div class="ddcontainer profiledd">
                                                                                         <a href="profile.html" class="ddheader">
                                                                                                 <img src="{{url_for('static',filename='images/zappa.jpg')}}" />
-                                                                                                <h5 class="ddname">Marvel</h5><span class="ddtitle">Gamer</span>
+                                                                                                <h5 class="ddname">{{current_user.name}}</h5><span class="ddtitle">Gamer</span>
                                                                                         </a>
                                                                                         <nav class="ddnav">
                                                                                                 <a href="notification.html"><span class="material-icons">notifications</span><span>Notifications</span></a>
@@ -99,7 +99,7 @@
                                                                                 <div class="ddcontainer profiledd">
                                                                                         <a href="profile.html" class="ddheader">
                                                                                                 <img src="{{url_for('static',filename='images/zappa.jpg')}}" />
-                                                                                                <h5 class="ddname">Marvel</h5><span class="ddtitle">Gamer</span>
+                                                                                                <h5 class="ddname">{{current_user.name}}</h5><span class="ddtitle">Gamer</span>
                                                                                         </a>
                                                                                         <nav class="ddnav">
                                                                                                 <a href="notification.html"><span class="material-icons">notifications</span><span>Notifications</span></a>
