--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -2236,6 +2236,7 @@ background-color:#dddfe2;
 .ddheader .ddname {
   color: #555;
   margin: 8px 0 4px;
+  text-transform: uppercase;
 }
 
 .ddheader .ddtitle {
