--- a/myproject/templates/index copy.html
+++ b/myproject/templates/index copy.html
@@ -54,7 +54,7 @@
                                                                                 </div>
                                                               <!-- dropdown profile menu -->
                                                                                 <div class="ddcontainer profiledd">
-                                                                                        <a href="profile.html" class="ddheader">
+                                                                                        <a href="userprofile.html" class="ddheader">
                                                                                                 <img src="assets/images/zappa.jpg" />
                                                                                                 <h5 class="ddname">Marvel</h5><span class="ddtitle">Gamer</span>
                                                                                         </a>
