--- a/myproject/index/templates/index/index.html
+++ b/myproject/index/templates/index/index.html
@@ -51,7 +51,7 @@
                                                               <!-- dropdown profile menu -->
                                                                                 <div class="ddcontainer profiledd">
                                                                                         <a href="profile.html" class="ddheader">
-                                                                                                <img src="{{url_for('static',filename='images/zappa.jpg')}}" />
+                                                                                                <a href="{{url_for('profile.profile_view',user_id=current_user.id)}}'"><img src="{{url_for('static',filename='images/zappa.jpg')}}"></a>
                                                                                                 <h5 class="ddname">{{current_user.name}}</h5><span class="ddtitle">Gamer</span>
                                                                                         </a>
                                                                                         <nav class="ddnav">
