--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -2228,7 +2228,7 @@ background-color:#dddfe2;
   background: #f7f7f7;
 }
 
-.ddheader img {
+.ddheader > a > img {
   border-radius: 50%;
   height: 52px;
 }
@@ -2264,4 +2264,304 @@ background-color:#dddfe2;
 .ddnav a:hover,
 .ddnav a:focus {
   background: #f7f7f7;
+}
+
+/*=================userprofile=======================*/
+
+.user-cover{
+	margin-top:90px;
+	background-image: url("../images/1.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	height: 400px;
+}
+
+.user-prof-pic{
+	height: 170px;
+	width: 170px;
+	border-radius: 50%;
+	margin: 20px 60px;
+	transition: 0.5s;
+}
+.user-prof-pic:hover{
+	border: solid 10px rgba(236, 236, 236, 0.25);
+}
+
+.user-profile-ul{
+	display: flex; 
+	justify-content: center;
+	align-items: center;
+}
+
+.user-profile-li{
+	display: inline-block;
+}
+
+.up-username{
+	font-size: 30px;
+	font-family: "HelveLight";
+	color: #ECECEC;
+	display: flex;
+	justify-content: center;
+	margin-bottom: 78px;
+}
+.up-follow{
+	background-color: rgba(56, 56, 56, 0.9);
+	border-radius: 10px 10px 0 0;
+	height: 80px;
+	width: 1088px;
+	margin: auto;
+}
+.up-follow-pic{
+	display: inline-block;
+	margin: 0 15px;
+	transition: 2s;
+}
+.up-follow-pic > a > img{
+	border-radius: 50%;
+	height: 50px;
+	width: 50px;
+}
+.up-followers > p{
+	text-align: center;
+	font-family: "HelveLight";
+	font-size: 16px;
+	line-height: 1.6;
+	color: #FFFFFF;
+	margin-left: 10px;
+}
+.up-followers > p > span{
+	color: #919191;
+	text-transform: capitalize;
+}
+/*.up-follow-pic > p{
+	background-color: rgba(255, 255, 255, 0.25);
+	border-radius: 50%;
+	border: solid 1px white;
+	height: 50px;
+	width: 50px;
+	text-align: center;
+	line-height: 50px;
+	color: white;
+	font-size: 16px;
+	font-family: "HelveLight"
+}*/
+.up-follow-va{
+	display: inline-block;
+	margin: 0 25px;
+}
+.up-follow-va > a > p{
+	border-radius: 5px;
+	border: solid 1px #707070;
+	height: 50px;
+	width: 80px;
+	text-align: center;
+	line-height: 50px;
+	color: #FFFFFF;
+	font-size: 16px;
+	text-transform: capitalize;
+	font-family: "HelveLight";
+	transition: 0.5s;
+}
+.up-follow-va > a > p:hover{
+	background-color: rgba(255, 255, 255, 0.25);
+}
+.div-line{
+	height: 100%;
+	width: 1px;
+	background-color: #FFFFFF;
+	margin: 0 20px;
+}
+.addclick{
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+	border: 3px solid #919191;
+	transition: 0.5s;
+}
+
+.addclick:hover{
+	background-color: rgba(255, 255, 255, 0.25);
+}
+
+.addclick img{
+	padding: 25px;
+}
+
+
+.hvr-float {
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-float:hover, .hvr-float:focus, .hvr-float:active {
+  -webkit-transform: translateY(-8px);
+  transform: translateY(-8px);
+}
+
+.profile-navbar{
+	max-width: 1088px;
+	height: 50px;
+	margin: auto;
+	padding: 2px 0;
+}
+.profile-navbar > ul{
+	display: inline-block;
+}
+.profile-navbar > ul > li{
+	display: inline-block;
+	color: #FFFFFF;
+	text-transform: capitalize;	
+	font-family: "HelveLight";
+	font-size: 25px;
+	height: 46px;
+	width: 150px;
+	line-height: 40px;
+	text-align: center;
+	transition: 0.5s;
+}
+.profile-navbar > ul > li:hover{
+	border-radius: 5px;
+	background-color: rgba(225, 225, 225, 0.25);
+
+}
+.profile-navbar > ul > li > a> img{
+	margin-left: 5px;
+}
+.ed-prof{
+	margin: 5px 22px 0 0;
+	border: solid 1px #D1D1D1;
+	height: 38px;
+	width: 140px;
+	display: inline-block;
+	float: right;
+	transition: 0.5s;
+}
+.ed-prof:hover{
+	background-color:  rgba(225, 225, 225, 0.25);
+}
+.editprofile{
+	display: inline-block;
+}
+.editprofile > div{
+	display: inline-block;
+	background-color: #363636;
+	height: 20px;
+	width: 20px;
+	border-radius: 50%;
+	border: solid 5px #ECECEC;
+	margin: 9px 0 0 9px;
+}
+.editprofile > p{
+	display: inline-block;
+	color: #D1D1D1;
+	font-size: 22px;
+	font-family: "HelveLight";
+	text-transform: capitalize;
+}
+.user-pic-video{
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 1088px;
+	margin: auto;
+	margin-bottom: 20px;
+}
+.pic-box{
+	background-image: url("../images/Tortura.jpg");
+	background-size: cover;
+	height: 250px;
+	width: 250px;
+	margin: 11px;
+	background-color: white;
+}
+.pic-box > div{
+	height: 250px;
+	width: 250px;
+	transition: 0.5s;
+	position: relative;
+}
+.pic-box > div:hover{
+	background-color: rgba(255, 0, 22, 0.25);
+}
+.likeorcomment{
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	right: 0;
+}
+.likeorcomment:hover{
+
+}
+
+.hvr-sweep-to-top {
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-sweep-to-top:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 190px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+background-image: url("../images/idk.svg");  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
+  color: white;
+}
+.hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1);
+}
+
+.vcadot1{
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	top: 15px;
+	left: 47px;
+}
+.vcadot2{
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	top: 15px;
+	right: 47px;
+
+}
+.ertia1{
+	width: 125px;
+	height: 60px;
+	position: absolute;
+	top: 190px;
+	left: 0px;
+}
+.ertia2{
+	width: 125px;
+	height: 60px;
+	position: absolute;
+	top: 190px;
+	right: 0px;
 }
